--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 dokumentet för att webbläsaren ska veta vilken standard som används i dokumenet och för att dokumentet därigenom kan läsas korrekt.-->
 <html lang="sv">
 <head>
-<meta charset="UTF-8"/>
-<title>Startsida | Djupvikshamn</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=2.0">
-<link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="styles/style.css">
+    <meta charset="UTF-8" />
+    <title>Startsida | Djupvikshamn</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=2.0">
+    <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <body>
     <header>
         <h1>Djupvik</h1>
-        <div id="mobilmenu" onclick="myFunction(this)">
-            <div id="mobilmenurad1"class="mobilmenurader"></div>
-            <div id="mobilmenurad2" class="mobilmenurader"></div>
-            <div id="mobilmenurad3" class="mobilmenurader"></div>
+        <div id="mobilmenu">
+            <div id="mobilmenyrad1" class="mobilmenyrader"></div>
+            <div id="mobilmenyrad2" class="mobilmenyrader"></div>
+            <div id="mobilmenyrad3" class="mobilmenyrader"></div>
         </div>
     </header>
     <nav id="menu">
@@ -96,6 +96,6 @@ dokumentet för att webbläsaren ska veta vilken standard som används i dokumen
     <footer>
         <p>Är du medlem i hamnföreningen och inte har tillgång till medlemsidan? Skicka ett e-post till sekreteraren <a href="mailto:info@djupvikshamn.se">(info@djupvikshamn.se)</a></p>
     </footer>
-    <script src="js/index.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
