--- a/html/contact.html
+++ b/html/contact.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <h1>Djupvik</h1>
+        <h1>En vacker hamn</h1>
         <div id="mobilmenu">
             <div id="mobilmenyrad1" class="mobilmenyrader"></div>
             <div id="mobilmenyrad2" class="mobilmenyrader"></div>
