small fixes to first page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ dokumentet för att webbläsaren ska veta vilken standard som används i dokumen
                 vackert belägen i anslutning till ett gammalt Gotländskt fiskeläge. I hamnen finns under
                 sommarsäsongen en kiosk med lite av varje.<br />Ett par hundra meter ovanför hamnen ligger <!-- har med target="_blank" i länktaggen a för att det är en extern länk-->
                 <a href="http://djupvikhotel.com" target="_blank">Djupviks Hotell</a>,
-                ett hotell med restaurang och bra standard.
+                ett hotell med restaurang och hög standard.
             </p>
 
             <h1>Senaste nytt</h1>
