--- a/html/info.html
+++ b/html/info.html
@@ -67,7 +67,7 @@
 
 
     <footer>
-        <p>Är du medlem i hamnföreningen och inte har tillgång till medlemsidan? Skicka ett e-post till sekreteraren ( <a href="mailto:info@djupvikshamn.se">info@djupvikshamn.se</a> ) </p>
+        <p>Är du medlem i hamnföreningen och inte har tillgång till medlemsidan? Skicka ett e-post till sekreteraren (<a href="mailto:info@djupvikshamn.se">info@djupvikshamn.se</a></p>
 
     </footer>
     <script src="../js/script.js"></script>
